--- a/index.html
+++ b/index.html
@@ -47,27 +47,27 @@
     <div class="grid" role="radiogroup" aria-label="Tarjetón – Selecciona un candidato" id="grid">
       <!-- Las imágenes deben estar junto al HTML con estos nombres exactos -->
       <div class="candidate" role="radio" tabindex="0" aria-checked="false" data-file="Daniel Quintero.png">
-        <div class="name">DANIEL QUINTERO CALLE</div>
+        <div class="name">DANIEL QUINTERO</div>
         <div class="photoBox"><img src="Daniel Quintero.png" alt="Daniel Quintero.png"></div>
         <div class="mark"><img src="X.png" alt="Marca X"></div>
       </div>
       <div class="candidate" role="radio" tabindex="0" aria-checked="false" data-file="Edinson Torres.png">
-        <div class="name">EDISON LUCIO TORRES MORENO</div>
+        <div class="name">EDISON TORRES</div>
         <div class="photoBox"><img src="Edinson Torres.png" alt="Edinson Torres.png"></div>
         <div class="mark"><img src="X.png" alt="Marca X"></div>
       </div>
       <div class="candidate" role="radio" tabindex="0" aria-checked="false" data-file="Hector Pineda.png">
-        <div class="name">HECTOR ELIAS PINEDA SALAZAR</div>
+        <div class="name">HECTOR PINEDA</div>
         <div class="photoBox"><img src="Hector Pineda.png" alt="Hector Pineda.png"></div>
         <div class="mark"><img src="X.png" alt="Marca X"></div>
       </div>
       <div class="candidate" role="radio" tabindex="0" aria-checked="false" data-file="Roy Barreras.png">
-        <div class="name">ROY LEONARDO BARRERAS MONTEALEGRE</div>
+        <div class="name">ROY BARRERAS</div>
         <div class="photoBox"><img src="Roy Barreras.png" alt="Roy Barreras.png"></div>
         <div class="mark"><img src="X.png" alt="Marca X"></div>
       </div>
       <div class="candidate" role="radio" tabindex="0" aria-checked="false" data-file="Martha Bernal.png">
-        <div class="name">MARTHA VIVIANA BERNAL AMAYA</div>
+        <div class="name">MARTHA BERNAL</div>
         <div class="photoBox"><img src="Martha Bernal.png" alt="Martha Bernal.png"></div>
         <div class="mark"><img src="X.png" alt="Marca X"></div>
       </div>
